--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
     <script src="log.js"></script>
     <script src="Pig.js"></script>
     <script src="Bird.js"></script>
+    <script src="Slingshot.js"></script>
     <link rel="stylesheet" type="text/css" href="style.css">
     <meta charset="utf-8">
 
